syntax = "proto3";

option go_package = "/proto";

package main;

message Trigger {
    string triggermessage = 1;
    map<string, string> metadata = 2;
}

message Acknowledge {
    bool success = 1;
    string error = 2;
}

message MeshStatus {
    string meshID = 1;
    bool connected = 2;
}

message SimpleLog {
    string message = 1;
}

message ComplexLog {
    string logsource = 1;
    string logtype = 2; 
    string logtime = 3;
    string logmessage = 4;
    map<string, string> logmetadata = 5;
}

message ControlCommand {
    string command = 1;
    map<string, string> metadata = 2;
}

service Interface {
    rpc Read (Trigger) returns (stream ComplexLog) {}
    rpc Write (ControlCommand) returns (Acknowledge) {}
}

service Orchestrator {
    rpc Status (Trigger) returns (MeshStatus) {}
    rpc Connection (Trigger) returns (Acknowledge) {}
    rpc Observe (Trigger) returns (stream SimpleLog) {}
    rpc Ping (Trigger) returns (Acknowledge) {}
}